--- a/CityGoASPBackEnd/CityGoASPBackEnd/CityGoASPBackEnd.csproj
+++ b/CityGoASPBackEnd/CityGoASPBackEnd/CityGoASPBackEnd.csproj
@@ -4,5 +4,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.8" />
+  </ItemGroup>
+
 
 </Project>
