--- a/CityGoASPBackEnd/CityGoASPBackEnd/Properties/launchSettings.json
+++ b/CityGoASPBackEnd/CityGoASPBackEnd/Properties/launchSettings.json
@@ -20,7 +20,7 @@
     "CityGoASPBackEnd": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "User",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
