update functie werkend

--- a/CityGoASPBackEnd/CityGoASPBackEnd/Properties/launchSettings.json
+++ b/CityGoASPBackEnd/CityGoASPBackEnd/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "User",
+      "launchUrl": "Users",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -20,7 +20,7 @@
     "CityGoASPBackEnd": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "User",
+      "launchUrl": "Users",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
