--- a/AdminPanel/package.json
+++ b/AdminPanel/package.json
@@ -42,6 +42,7 @@
     "@angular/platform-browser-dynamic": "^10.0.10",
     "@angular/router": "^10.0.10",
     "@asymmetrik/ngx-leaflet": "3.0.1",
+    "@auth0/auth0-angular": "^1.2.0",
     "@nebular/auth": "6.0.0",
     "@nebular/eva-icons": "6.0.0",
     "@nebular/security": "6.0.0",
@@ -77,7 +78,7 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.6",
+    "@angular-devkit/build-angular": "^0.1000.6",
     "@angular/cli": "^10.0.6",
     "@angular/compiler-cli": "^10.0.10",
     "@angular/language-service": "10.0.10",
