--- a/CityGoApp/package.json
+++ b/CityGoApp/package.json
@@ -8,14 +8,21 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/google-signin": "^5.0.0",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-firebase/app": "^10.0.0",
+    "@react-native-firebase/auth": "^10.0.0",
     "@react-navigation/material-bottom-tabs": "^5.2.19",
+    "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.10.0",
     "@ui-kitten/components": "^5.0.0",
     "expo": "^39.0.3",
     "expo-camera": "^9.0.0",
+    "expo-google-sign-in": "^8.3.0",
     "expo-permissions": "^9.3.0",
     "expo-status-bar": "~1.0.2",
+    "firebase": "^8.1.1",
     "geofence": "^1.0.9",
     "lodash.filter": "^4.6.0",
     "native-base": "^2.13.14",
@@ -23,18 +30,23 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
     "react-native-camera": "^3.40.0",
+    "react-native-dotenv": "^2.4.2",
     "react-native-geo-fencing": "^0.1.0",
     "react-native-geolocation-service": "^5.0.0",
-    "react-native-gesture-handler": "~1.7.0",
+    "react-native-gesture-handler": "^1.9.0",
     "react-native-maps": "^0.27.1",
+    "react-native-onboarding-swiper": "^1.1.4",
     "react-native-paper": "^4.2.0",
-    "react-native-reanimated": "~1.13.0",
+    "react-native-reanimated": "^1.13.2",
+    "react-native-router-flux": "^4.2.0",
     "react-native-safe-area-context": "3.1.4",
-    "react-native-screens": "~2.10.1",
+    "react-native-screens": "^2.15.0",
+    "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.3",
     "react-navigation-material-bottom-tabs": "^2.3.2",
-    "react-viro": "^2.17.0"
+    "react-viro": "^2.17.0",
+    "statusbar": "^0.2.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
