--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,6 +16,7 @@ steps:
   displayName: 'Install Node.js'
 
 - script: |
+    azure-pipelines-1
     cd AdminPanel
     npm install -g @angular/cli
     npm install
