--- a/AdminPanel/package.json
+++ b/AdminPanel/package.json
@@ -30,6 +30,7 @@
     "postinstall": "ngcc --properties es2015 es5 browser module main --first-only --create-ivy-entry-points --tsconfig \"./src/tsconfig.app.json\""
   },
   "dependencies": {
+    "@agm/core": "^1.0.0",
     "@akveo/ng2-completer": "^9.0.1",
     "@angular/animations": "^10.0.10",
     "@angular/cdk": "10.1.1",
