--- a/CityGoApp/package.json
+++ b/CityGoApp/package.json
@@ -23,6 +23,7 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
     "react-native-camera": "^3.40.0",
+    "react-native-elements": "^3.0.0-alpha.1",
     "react-native-geo-fencing": "^0.1.0",
     "react-native-geolocation-service": "^5.0.0",
     "react-native-gesture-handler": "~1.7.0",
