--- a/CityGoApp/package.json
+++ b/CityGoApp/package.json
@@ -13,16 +13,20 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-firebase/app": "^10.0.0",
     "@react-native-firebase/auth": "^10.0.0",
+    "@react-native-firebase/firestore": "^10.1.1",
     "@react-navigation/material-bottom-tabs": "^5.2.19",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.10.0",
     "@ui-kitten/components": "^5.0.0",
     "expo": "^39.0.3",
     "expo-camera": "^9.0.0",
+    "expo-constants": "^9.2.0",
     "expo-google-sign-in": "^8.3.0",
+    "expo-notifications": "^0.7.2",
     "expo-permissions": "^9.3.0",
     "expo-status-bar": "~1.0.2",
     "firebase": "^8.1.1",
+    "firestore": "^1.1.6",
     "geofence": "^1.0.9",
     "lodash.filter": "^4.6.0",
     "native-base": "^2.13.14",
