--- a/CityGoASPBackEnd/Application/Application.csproj
+++ b/CityGoASPBackEnd/Application/Application.csproj
@@ -6,9 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="5.10.3" />
     <PackageReference Include="MediatR" Version="9.0.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.9" />
+    <PackageReference Include="Moq" Version="4.15.2" />
+    <PackageReference Include="Respawn" Version="3.3.0" />
   </ItemGroup>
 
   <ItemGroup>
