--- a/CityGoASPBackEnd/Application/Application.csproj
+++ b/CityGoASPBackEnd/Application/Application.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="MediatR" Version="9.0.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
     <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.2.7" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.9" />
     <PackageReference Include="Moq" Version="4.15.2" />
     <PackageReference Include="Respawn" Version="3.3.0" />
