--- a/CityGoApp/package.json
+++ b/CityGoApp/package.json
@@ -46,6 +46,7 @@
     "react-native-router-flux": "^4.2.0",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "^2.15.0",
+    "react-native-svg": "^12.1.0",
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.3",
