--- a/CityGoApp/app.json
+++ b/CityGoApp/app.json
@@ -23,7 +23,8 @@
       "favicon": "./assets/favicon.png"
     },
     "android":{
-      "permissions":["ACCESS_COARSE_LOCATION","ACCESS_FINE_LOCATION"]
+      "permissions":["ACCESS_COARSE_LOCATION","ACCESS_FINE_LOCATION"],
+      "useNextNotificationsApi": true
     }
   }
 }
