--- a/CityGoApp/package.json
+++ b/CityGoApp/package.json
@@ -22,7 +22,7 @@
     "expo-camera": "^9.0.0",
     "expo-constants": "^9.2.0",
     "expo-google-sign-in": "^8.3.0",
-    "expo-notifications": "~0.7.2",
+    "expo-notifications": "^0.7.2",
     "expo-permissions": "~9.3.0",
     "expo-status-bar": "~1.0.2",
     "firebase": "^8.2.1",
