Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -39,3 +39,7 @@ steps:
       !**\*TestAdapter.dll
       !**\obj\**
     searchFolder: '$(System.DefaultWorkingDirectory)'
+    runTestsInIsolation:  true
+    codeCoverageEnabled:  true
+    platform: '$(buildPlatform)'
+    configuration: '$(buildConfiguration)'
