--- a/CityGoApp/package.json
+++ b/CityGoApp/package.json
@@ -11,41 +11,41 @@
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/google-signin": "^5.0.0",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-native-firebase/app": "^10.1.0",
-    "@react-native-firebase/auth": "^10.1.1",
-    "@react-native-firebase/firestore": "^10.1.1",
+    "@react-native-firebase/app": "^10.4.0",
+    "@react-native-firebase/auth": "^10.4.1",
+    "@react-native-firebase/firestore": "^10.4.1",
     "@react-navigation/material-bottom-tabs": "^5.3.10",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "@ui-kitten/components": "^5.0.0",
     "expo": "^39.0.5",
-    "expo-camera": "^9.0.0",
-    "expo-constants": "^9.2.0",
-    "expo-google-sign-in": "^8.3.0",
+    "expo-camera": "^9.1.1",
+    "expo-constants": "^9.3.5",
+    "expo-google-sign-in": "^8.4.0",
     "expo-notifications": "^0.7.2",
     "expo-permissions": "~9.3.0",
-    "expo-status-bar": "~1.0.2",
-    "firebase": "^8.2.1",
+    "expo-status-bar": "^1.0.3",
+    "firebase": "^8.2.2",
     "firestore": "^1.1.6",
     "geofence": "^1.0.9",
     "lodash.filter": "^4.6.0",
-    "native-base": "^2.13.15",
+    "native-base": "^2.15.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
-    "react-native-camera": "^3.40.0",
-    "react-native-dotenv": "^2.4.3",
-    "react-native-elements": "^3.0.0-alpha.1",
+    "react-native-camera": "^3.41.0",
+    "react-native-dotenv": "^2.5.0",
+    "react-native-elements": "^3.1.0",
     "react-native-geo-fencing": "^0.1.0",
     "react-native-geolocation-service": "^5.1.1",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-maps": "^0.27.1",
     "react-native-onboarding-swiper": "^1.1.4",
-    "react-native-paper": "^4.4.1",
+    "react-native-paper": "^4.6.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-router-flux": "^4.2.0",
     "react-native-safe-area-context": "3.1.4",
-    "react-native-screens": "^2.15.0",
+    "react-native-screens": "^2.16.1",
     "react-native-svg": "^12.1.0",
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12",
