--- a/CityGoApp/package.json
+++ b/CityGoApp/package.json
@@ -22,7 +22,7 @@
     "expo-camera": "^9.1.1",
     "expo-constants": "^9.3.5",
     "expo-google-sign-in": "^8.4.0",
-    "expo-notifications": "^0.9.0",
+    "expo-notifications": "^0.7.2",
     "expo-permissions": "~9.3.0",
     "expo-status-bar": "^1.0.3",
     "firebase": "^8.2.2",
@@ -30,9 +30,10 @@
     "geofence": "^1.0.9",
     "lodash.filter": "^4.6.0",
     "native-base": "^2.15.2",
+    "notifications": "^0.2.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
+    "react-native": "0.63.4",
     "react-native-camera": "^3.41.0",
     "react-native-dotenv": "^2.5.0",
     "react-native-elements": "^3.1.0",
