--- a/CityGoApp/package.json
+++ b/CityGoApp/package.json
@@ -1,11 +1,11 @@
 {
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "eject": "expo eject"
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.1",
@@ -30,10 +30,9 @@
     "geofence": "^1.0.9",
     "lodash.filter": "^4.6.0",
     "native-base": "^2.15.2",
-    "notifications": "^0.2.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "0.63.4",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
     "react-native-camera": "^3.41.0",
     "react-native-dotenv": "^2.5.0",
     "react-native-elements": "^3.1.0",
