--- a/CityGoApp/package.json
+++ b/CityGoApp/package.json
@@ -39,6 +39,7 @@
     "react-native-geo-fencing": "^0.1.0",
     "react-native-geolocation-service": "^5.1.1",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-leaderboard": "^1.0.6",
     "react-native-maps": "^0.27.1",
     "react-native-onboarding-swiper": "^1.1.4",
     "react-native-paper": "^4.6.0",
