--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -5,8 +5,10 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
 
 trigger:
-- master
-
+  batch: true
+  branches:
+    include:
+    - master
 pool:
   vmImage: 'windows-latest'
 
