--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,8 +4,10 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
 
 trigger:
-- master
-
+  batch: true
+  branches:
+    include:
+    - master
 pool:
   vmImage: 'ubuntu-latest'
 
