--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -22,6 +22,7 @@ steps:
     cd CityGoApp
     npm install -g expo-cli
     npm install
-    expo start
+    expo login -u jens.uenk@icloud.com -p byvnos-wypre4-dyGton --non-interactive
+    expo build:android --non-interactive
 
   displayName: 'npm install and build'
